kubernetes/clusters/live/config/redlib/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redlib
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    network-policy.homelab/profile: internal
